Lagt til prepost-figur, dvs. sml hovedskjema og kontroll

--- a/inst/NSsamleRapp.Rnw
+++ b/inst/NSsamleRapp.Rnw
@@ -134,7 +134,7 @@ s1 <- 0.8	#Skaleringsparameter for enkeltfigurer
 
 #Utvalg/datarensk
 Ninn <- dim(NSdata)[1]
-Utvalg <- NSUtvalg(RegData=NSdata, datoFra=datoFra, datoTil=datoTil)
+Utvalg <- NSUtvalgEnh(RegData=NSdata, datoFra=datoFra, datoTil=datoTil)
 NSdata <- Utvalg$RegData
 NSdataEget <- NSdata[NSdata$ReshId == reshID,]
 
@@ -230,7 +230,7 @@ utvalg <- switch(hvem,
 		Sunnaas = which(NSdata$ReshId == 106896),
 		St.Olav = which(NSdata$ReshId == 107627))
 
-                                               
+
 	Alder <- NSdata$Alder[utvalg]
 	BehDager <- NSdata$OpphTot[utvalg]
 	RehabDager <- NSdata$DagerRehab[(utvalg %i% fra2015)]
@@ -280,7 +280,7 @@ utvalg <- switch(hvem,
 
 Nutv <- length(utvalg)
 Kjonn <- table(NSdata$erMann[utvalg])
-AntTilHjem <- c(sum(NSdata$UtTil[utvalg]==1), sum(NSdata$UtTil[utvalg] %in% 1:10))
+AntTilHjem <- c(sum(NSdata$PlaceDis[utvalg]==1), sum(NSdata$PlaceDis[utvalg] %in% 1:10))
 AntAssSkade <-c(sum(NSdata$AssocInj[utvalg]==1), sum(NSdata$AssocInj[utvalg] %in% 0:1))
 AntSpinkir <- c(sum(NSdata$SpnlSurg[utvalg]==1), sum(NSdata$SpnlSurg[utvalg] %in% 0:1))
 AntTraumer <- c(sum(NSdata$SkadeArsak[utvalg] %in% 1:5), sum(NSdata$SkadeArsak[utvalg] %in% 1:6))
@@ -619,7 +619,7 @@ av data til figurene.
 \scalebox{\Sexpr{s1}}{
 <<FigOpphTotgjsn, echo=FALSE>>=
 	NSFigGjsnGrVar(NSdata,   valgtVar='OpphTot', datoFra=datoFra, datoTil=datoTil,
-		valgtMaal='gjsn', minald=minald, maxald=maxald, erMann=erMann, traume=traume, preprosess=0, 
+		valgtMaal='gjsn', minald=minald, maxald=maxald, erMann=erMann, traume=traume, preprosess=0,
     hentData=0)
 @
 }
@@ -633,7 +633,7 @@ av data til figurene.
 \scalebox{\Sexpr{s1}}{
 <<FigOpphTotMed, echo=FALSE>>=
 	NSFigGjsnGrVar(NSdata, valgtVar='OpphTot', datoFra=datoFra, datoTil=datoTil,
-		valgtMaal='med', minald=minald, maxald=maxald, erMann=erMann, preprosess=0, 
+		valgtMaal='med', minald=minald, maxald=maxald, erMann=erMann, preprosess=0,
     traume=traume, hentData=0)
 @
 }
