--- a/inst/NSmndRapp.Rnw
+++ b/inst/NSmndRapp.Rnw
@@ -384,7 +384,8 @@ xtable::xtable(NevrKlass28, digits=0, align=c('l', rep('r', ncol(NevrKlass28))),
 
 Liggetider <- function(RegData, datoFra='2018-01-01', datoTil=Sys.Date(), datoUt=1,
                        enhetsUtvalg=0, reshID=0, traume='') {
-      RegData <- NSUtvalg(RegData=RegData, datoFra=datoFra, datoTil = datoTil, datoUt = 1,
+      #sep23: NSUtvalg -> NSUtvalgEnh
+      RegData <- NSUtvalgEnh(RegData=RegData, datoFra=datoFra, datoTil = datoTil, datoUt = 1,
                           traume=traume, enhetsUtvalg = enhetsUtvalg, reshID = reshID)$RegData
       Liggetider <- rbind('Liggetid, totalt' = summary(RegData$OpphTot)[c(1,3,4,6)],
                           'Liggetid på rehab.' =summary(RegData$DagerRehab)[c(1,3,4,6)],
