--- a/inst/test.Rnw
+++ b/inst/test.Rnw
@@ -1,20 +1,15 @@
-%% LyX 2.2.1 created this file.  For more info, see http://www.lyx.org/.
-%% Do not edit unless you really know what you are doing.
-\documentclass{article}
-%\usepackage[sc]{mathpazo}
+\documentclass[presentation,xcolor=pdftex,dvipsnames,table]{beamer}
+\usetheme{Hannover}
+
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{geometry}
-\geometry{verbose,tmargin=2.5cm,bmargin=2.5cm,lmargin=2.5cm,rmargin=2.5cm}
-\setcounter{secnumdepth}{2}
-\setcounter{tocdepth}{2}
-\usepackage{url}
-\usepackage[unicode=true,pdfusetitle,
-            bookmarks=true,bookmarksnumbered=true,bookmarksopen=true,bookmarksopenlevel=2,
-            breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=false]
-{hyperref}
-\hypersetup{
-      pdfstartview={XYZ null null 1}}
-%\usepackage{breakurl}
+\usepackage[english, norsk]{babel}
+\usepackage{xspace}
+\usepackage{booktabs}
+\usepackage{rotating}
+\usepackage{graphicx}
+
+
 \begin{document}
 <<setup, include=FALSE, cache=FALSE>>=
       library(knitr)
