--- a/inst/brukerveiledningNordisk.Rmd
+++ b/inst/brukerveiledningNordisk.Rmd
@@ -27,4 +27,4 @@ __Registreringsoversikter__ viser aktivitet i registeret. Også her kan man gjø
 __Abonnement__ inneholder oversikt over rapporter du abonnerer på. Her kan du også bestille abonnement, dvs. rapporter tilsendt på e-post.
                             
 Alle pasienter med nyervervet ryggmargsskade eller Cauda equina syndrom som legges inn til spesialisert rehabilitering ved en ryggmargsskadeavdeling, blir forespurt om samtykke til å bli registrert i Nordisk ryggmargsskaderegister. Dette registeret har til hensikt å sikre og forbedre ryggmargsskadeomsorgen i Norden. Mer informasjon om selve registeret finnes på hjemmesiden: 
-[NordicSCIR - St. Olavs hospital HF](http://www.stolav.no/nordicscir).
+[NordicSCIR - St. Olavs hospital HF](https://www.stolav.no/nordicscir).
